--- a/app/src/main/res/layout/fragment_initial.xml
+++ b/app/src/main/res/layout/fragment_initial.xml
@@ -7,15 +7,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UFOInitialFragment">
 
+    <ImageView
+        android:id="@+id/initialImage"
+        android:src="@drawable/logo"
+        android:layout_width="match_parent"
+        android:layout_height="137dp"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/initialText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.535" />
+
     <TextView
-        android:id="@+id/initialView"
-        android:layout_width="wrap_content"
+        android:id="@+id/initialText"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginBottom="72dp"
+        android:gravity="center"
         android:text="@string/not_connected"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
