--- a/app/src/main/res/layout/fragment_connection.xml
+++ b/app/src/main/res/layout/fragment_connection.xml
@@ -7,12 +7,12 @@
     android:background="@color/colorOnWeak">
 
     <ImageView
+        android:id="@+id/logo"
         android:contentDescription="logo"
         android:layout_weight="3"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:src="@drawable/logo"
-        android:id="@+id/logo"/>
+        android:src="@drawable/logo" />
 
     <TextView
         android:id="@+id/connectionStateText"
