--- a/app/src/main/res/layout/fragment_initial.xml
+++ b/app/src/main/res/layout/fragment_initial.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorOnStrong"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UFOInitialFragment">
 
     <ImageView
         android:id="@+id/initialImage"
-        android:src="@drawable/logo"
+        android:src="@drawable/top"
         android:layout_width="match_parent"
-        android:layout_height="137dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintBottom_toTopOf="@+id/initialText"
         app:layout_constraintEnd_toEndOf="parent"
