--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -112,6 +112,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:layout_marginHorizontal="30dp"
             android:backgroundTint="@color/colorPrimary"
             android:indeterminate="false"
             android:max="100"
