--- a/app/src/main/res/layout/fragment_connection.xml
+++ b/app/src/main/res/layout/fragment_connection.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorOnWeak">
+    android:background="@color/colorOnWeak"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/logo"
-        android:contentDescription="logo"
-        android:layout_weight="3"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:contentDescription="@string/app_name"
         android:src="@drawable/logo" />
 
     <TextView
