--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".UFOMainFragment">
 
     <LinearLayout
-        android:layout_weight="5"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="5"
         android:orientation="vertical">
 
         <TextView
-            android:layout_weight="0.8"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_margin="5dp"
             android:layout_marginHorizontal="1dp"
-            android:text="@string/record_header"
-            android:textColor="@color/colorOnStrong"
+            android:layout_weight="0.8"
             android:background="@drawable/header"
             android:gravity="center_vertical"
-            android:paddingLeft="16dp"
-            android:layout_margin="5dp"/>
+            android:paddingStart="16dp"
+            android:paddingEnd="0dp"
+            android:text="@string/record_header"
+            android:textColor="@color/colorOnStrong" />
 
         <ToggleButton
             android:id="@+id/recordButton"
@@ -55,7 +56,6 @@
             android:gravity="center_vertical|end"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:text="0.0"
             android:textAlignment="gravity"
             android:textSize="32sp" />
 
@@ -70,23 +70,23 @@
     </LinearLayout>
 
 
-
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_weight="5"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:layout_weight="5"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_weight="0.8"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="5dp"
-            android:text="@string/control_header"
-            android:textColor="@color/colorOnStrong"
+            android:layout_weight="0.8"
             android:background="@drawable/header"
             android:gravity="center_vertical"
-            android:paddingLeft="16dp" />
+            android:paddingStart="16dp"
+            android:paddingEnd="0dp"
+            android:text="@string/control_header"
+            android:textColor="@color/colorOnStrong" />
 
         <ToggleButton
             android:id="@+id/controlButton"
@@ -111,8 +111,8 @@
             android:id="@+id/controlPowerSeekBar"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_marginHorizontal="30dp"
+            android:layout_weight="1"
             android:backgroundTint="@color/colorPrimary"
             android:indeterminate="false"
             android:max="100"
@@ -120,11 +120,11 @@
             android:textAlignment="center" />
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginHorizontal="5dp">
+            android:layout_marginHorizontal="5dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/controlLeftButton"
