--- a/app/src/main/res/layout/fragment_record_list.xml
+++ b/app/src/main/res/layout/fragment_record_list.xml
@@ -9,19 +9,20 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_margin="12dp"
         android:layout_marginHorizontal="1dp"
-        android:text="@string/record_list_header"
-        android:textColor="@color/colorOnStrong"
-        android:textSize="16sp"
         android:background="@drawable/header"
         android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:layout_margin="12dp"/>
+        android:paddingStart="16dp"
+        android:paddingEnd="0dp"
+        android:text="@string/record_list_header"
+        android:textColor="@color/colorOnStrong"
+        android:textSize="16sp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recordRecyclerView"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 
 </LinearLayout>
