initialのフォントを変更

--- a/app/src/main/res/layout/fragment_initial.xml
+++ b/app/src/main/res/layout/fragment_initial.xml
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/colorOnStrong"
     tools:context=".UFOInitialFragment">
 
     <ImageView
         android:id="@+id/initialImage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:src="@drawable/top"
-        app:layout_constraintBottom_toTopOf="@+id/initialText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.535" />
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        android:layout_margin="16dp"
+        android:src="@drawable/top" />
 
     <TextView
-        android:id="@+id/initialText"
+        android:id="@+id/howToUse"
+        fontPath="fonts/NotoSansCJKjp-hinted/NotoSansCJKjp-Thin.otf"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="72dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:gravity="center"
-        android:text="@string/not_connected"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        fontPath=""/>
+        android:text="@string/how_to_use"
+        android:textSize="20sp"
+        tools:ignore="MissingPrefix" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/description"
+        fontPath="fonts/NotoSansCJKjp-hinted/NotoSansCJKjp-Thin.otf"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5"
+        android:layout_marginStart="48dp"
+        android:gravity="start"
+        android:text="@string/description"
+        android:textSize="20sp"
+        tools:ignore="MissingPrefix" />
+
+</LinearLayout>
